--- a/templates/in_review_papers.html
+++ b/templates/in_review_papers.html
@@ -4,11 +4,11 @@
 <h1>In Review Papers</h1>
 <form id="papers-form" method="post">
     <div class="actions mb-3">
-        <button type="submit" name="action" value="move_to_read" class="btn btn-primary">Move to Read</button>
-        <button type="submit" name="action" value="move_to_unread" class="btn btn-secondary">Move to Unread</button>
-        <button type="button" onclick="getSelectedLinks()" class="btn btn-secondary">Copy Abstract Links</button>
+        <button type="submit" name="action" value="move_to_read" class="btn btn-primary mr-2 mb-2">Move to Read</button>
+        <button type="submit" name="action" value="move_to_unread" class="btn btn-secondary mr-2 mb-2">Move to Unread</button>
+        <button type="button" onclick="getSelectedLinks()" class="btn btn-info mr-2 mb-2">Copy Abstract Links</button>
     </div>
-    <table class="table table-striped">
+    <table class="table table-striped table-hover">
         <thead>
             <tr>
                 <th><input type="checkbox" onclick="toggleSelectAll(this)"></th>
@@ -31,7 +31,6 @@
 {% endblock %}
 {% block scripts %}
 <script>
-    // Same scripts as in unread_papers.html
     function getSelectedLinks() {
         var form = document.getElementById('papers-form');
         var formData = new FormData(form);
