--- a/templates/read_papers.html
+++ b/templates/read_papers.html
@@ -4,10 +4,10 @@
 <h1>Read Papers</h1>
 <form id="papers-form" method="post">
     <div class="actions mb-3">
-        <button type="submit" name="action" value="move_to_in_review" class="btn btn-warning">Move to In Review</button>
-        <button type="button" onclick="getSelectedLinks()" class="btn btn-secondary">Copy Abstract Links</button>
+        <button type="submit" name="action" value="move_to_in_review" class="btn btn-warning mr-2 mb-2">Move to In Review</button>
+        <button type="button" onclick="getSelectedLinks()" class="btn btn-info mr-2 mb-2">Copy Abstract Links</button>
     </div>
-    <table class="table table-striped">
+    <table class="table table-striped table-hover">
         <thead>
             <tr>
                 <th><input type="checkbox" onclick="toggleSelectAll(this)"></th>
@@ -30,7 +30,6 @@
 {% endblock %}
 {% block scripts %}
 <script>
-    // Same scripts as in unread_papers.html
     function getSelectedLinks() {
         var form = document.getElementById('papers-form');
         var formData = new FormData(form);
