--- a/templates/unread_papers.html
+++ b/templates/unread_papers.html
@@ -4,11 +4,11 @@
 <h1>Unread Papers</h1>
 <form id="papers-form" method="post">
     <div class="actions mb-3">
-        <button type="submit" name="action" value="move_to_read" class="btn btn-primary">Move to Read</button>
-        <button type="submit" name="action" value="move_to_in_review" class="btn btn-warning">Move to In Review</button>
-        <button type="button" onclick="getSelectedLinks()" class="btn btn-secondary">Copy Abstract Links</button>
+        <button type="submit" name="action" value="move_to_read" class="btn btn-primary mr-2 mb-2">Move to Read</button>
+        <button type="submit" name="action" value="move_to_in_review" class="btn btn-warning mr-2 mb-2">Move to In Review</button>
+        <button type="button" onclick="getSelectedLinks()" class="btn btn-secondary mr-2 mb-2">Copy Abstract Links</button>
     </div>
-    <table class="table table-striped">
+    <table class="table table-striped table-hover">
         <thead>
             <tr>
                 <th><input type="checkbox" onclick="toggleSelectAll(this)"></th>
