--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
 {% block content %}
-<div class="card" id="paper-container">
+<h1 class="mt-4">SwipeXiv - arXiv Paper Swiper</h1>
+<div class="card mt-3" id="paper-container">
     <div class="card-body">
         <h2 id="title">Loading...</h2>
         <p id="summary"></p>
